# curve13318-cortex_m4

./: Cargo.toml  README.md  build.rs  memory.x  openocd.gdb  rls.toml
.cargo/: config
fe25519-sys/: Cargo.toml  build.rs  wrapper.h
fe25519-sys/fe25519/: bigint.c  bigint.h  cortex_m4_add_fe25519.S  cortex_m4_fe25519_mpy_uint16.S  cortex_m4_mpy121666.S  cortex_m4_mpy_192.S  cortex_m4_mpy_fe25519.S  cortex_m4_reduce25519.S  cortex_m4_sqr_256.S  cortex_m4_sqr_fe25519.S  fe25519.c  fe25519.h  fe25519_constants.c  fe25519_invert.c  fe25519_mul_u32_asm.S
fe25519-sys/src/: lib.rs
src/: main.rs
