[package]
name = "curve13318"
version = "0.1.0"
authors = ["Amber Sprenkels <amber@electricdusk.com>"]
edition = "2018"
license = "CC0-1.0"

[workspace]
members = ["fe25519-sys"]

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.8"
cortex-m-semihosting = "0.3.3"
fe25519-sys = { path = "fe25519-sys" }
panic-semihosting = "0.5.2"
# panic-itm = "0.4.1"

[profile.dev]
opt-level = 3
codegen-units = 1
debug = true
lto = true

[profile.release]
opt-level = 3
codegen-units = 1
debug = true
lto = true
